--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- User Input Form for Username and Wallet Address -->
+    <div id="userForm">
+        <label for="username">Username:</label>
+        <input type="text" id="username" placeholder="Enter your username" required>
+  
+        <label for="wallet">Wallet Address:</label>
+        <input type="text" id="wallet" placeholder="Enter your wallet address" required>
+  
+        <button id="startGameButton">Start Game</button>
+  </div>
     <canvas id="gameCanvas"></canvas>
     <div id="scoreContainer">
         <p id="score">Score: 0</p>
